# waywallen

./: BUILD.md
.github/workflows/: appimage.yml
bridge/: CMakeLists.txt
bridge/include/waywallen-bridge/: bridge.h  drm_fourcc.h  ipc_v1.h  probe_egl.h  probe_vk.h  protocol_bits.h
bridge/src/: bridge.c  drm_fourcc.c  ipc_v1.c  pool_egl_gbm.c  pool_vulkan.c  probe_egl.c  probe_vk.c
displays/layer-shell/src/: main.rs
libs/ffmpeg/src/: video_decoder.cpp  vk_device.cpp  vk_device.hpp
plugins/: CMakeLists.txt
plugins/image/src/: main.cpp  vk_producer.cpp  vk_producer.hpp
plugins/mpv/src/: main.cpp
plugins/video/: CMakeLists.txt
plugins/video/renderers/: waywallen-video.toml
plugins/video/sources/: video.lua
plugins/video/src/: main.cpp
protocol/: waywallen_display_v1.xml  waywallen_ipc_v1.xml
scripts/: build_appimage.sh
src/: dbus_iface.rs  display_endpoint.rs  display_layout.rs  lib.rs  main.rs  negotiate.rs  probe_task.rs  renderer_manager.rs
src/display_proto/: codec.rs  mod.rs
src/routing/: router.rs
src/sync/: drm_syncobj.rs  reaper.rs
tests/: display_handshake.rs  display_sync_fd_fanout.rs  display_sync_fd_single.rs  release_syncobj_e2e.rs
ui/: deps.json
ui/qml/page/: DisplaysPage.qml  StatusPage.qml
ui/src/: backend.cppm  display.cpp  display.cppm  library.cpp  library.cppm  renderer.cpp  renderer.cppm
ui/src/model/: list_models.cppm  share_store.cppm  store_item.cppm
